# wasm-wave

./: Cargo.toml  README.md  wave_ebnf.md
.github/workflows/: rust.yml
contrib/vscode/: package.json
contrib/vscode/syntaxes/: wave.tmLanguage.json
src/: ast.rs  completion.rs  component.rs  fmt.rs  func.rs  lex.rs  lib.rs  parser.rs  ty.rs  untyped.rs  val.rs  writer.rs
src/value/: convert.rs  func.rs  mod.rs  tests.rs  ty.rs  wit.rs
src/wasm/: mod.rs  val.rs
src/wasmtime/: component.rs  core.rs  mod.rs
tests/: errors.rs  nan.rs  round_trip.rs  types.wasm  types.wit  ui.rs  wasmtime.rs
tests/ui/: README.md  accept-chars.wave  accept-comments.waves  accept-enums.out  accept-enums.waves  accept-flags.wave  accept-floats.wave  accept-records.waves  accept-strings.out  accept-strings.wave  accept-strings.waves  reject-chars.out  reject-chars.waves  reject-comments.out  reject-enums.waves  reject-flags.out  reject-flags.waves  reject-floats.out  reject-floats.wave  reject-lists.wave  reject-options.wave  reject-options.waves  reject-records.out  reject-records.waves  reject-results.out  reject-results.wave  reject-strings.out  reject-strings.wave  reject-strings.waves  ui.wit
