[package]
name = "wasm-wave"
version = "0.2.0"
authors = ["lann.martin@fermyon.com"]
description = "Web Assembly Value Encoding"
license = "Apache-2.0"
documentation = "https://github.com/lann/wave"
categories = ["wasm", "encoding", "parser-implementations"]
repository = "https://github.com/lann/wave"
readme = "README.md"
edition = "2021"

[dependencies]
indexmap = "2.0.0"
thiserror = "1.0.48"
wasmtime = { workspace = true }

[dev-dependencies]
wasmtime = { workspace = true, features = ["cranelift"] }

[workspace.dependencies]
wasmtime = { version = "13.0.0", default-features = false, features = ["component-model"] }
