[package]
name = "wasm-wave"
version = "0.3.0"
authors = ["lann.martin@fermyon.com"]
description = "Web Assembly Value Encoding"
license = "Apache-2.0"
documentation = "https://docs.rs/wasm-wave"
categories = ["wasm", "encoding", "parser-implementations"]
repository = "https://github.com/lann/wave"
readme = "README.md"
edition = "2021"

[features]
default = ["wasmtime", "wit"]
wasmtime = ["dep:wasmtime"]
wit = ["dep:wit-parser"]

[dependencies]
indexmap = "2.0.0"
itertools = "0.12.0"
logos = "0.13.0"
thiserror = "1.0.48"
wasmtime = { workspace = true, optional = true }
wit-parser = { workspace = true, optional = true }

[[test]]
name = "ui"
path = "tests/ui.rs"
harness = false

[dev-dependencies]
snapbox = { version = "0.4.16", features = ["harness"] }
wasmtime = { workspace = true, optional = false, features = ["cranelift"] }

[workspace.dependencies]
wasmtime = { version = "13.0.0", default-features = false, features = ["component-model"] }
wit-parser = "0.13.1"
